- minor changes made

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="grid__row">
                     <div class="grid__col-md-12">
                         <div class="header">
-                            <div class="sitename">
+                            <div class="site-name">
                                 sitename
                             </div>
                             <div class="site-title">
