Added main blocks structure: - added html elements; - added css class names.

--- a/index.html
+++ b/index.html
@@ -28,29 +28,156 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div class="container">
-        <div class="grid-container">
-            <div class="grid">
+    <div class="main">
+        <div class="grid__container">
                 <div class="grid__row">
                     <div class="grid__col-md-12">
+                        
                         <div class="header">
-                            <div class="site-name">
-                                sitename
-                            </div>
-                            <div class="site-title">
-                                my first web page
-                            </div>
-                            <div class="login-link">
-                                <i class="fa fa-key" aria-hidden="true"></i>
-                                <div class="login-link__link">
-                                    login
+                            <div class="logo">
+                                <div class="logo__title">
+                                    sitename
                                 </div>
-                                <div class="contact-button">
-                                    contact me
+                                <div class="logo__description">
+                                    my first web page
+                                </div>
+                            </div>
+                            <div class="login">
+                                <div class="login__key-icon">
+                                    <i class="fa fa-key" aria-hidden="true"></i>
+                                </div>
+                                <a class="login__link" href="#">
+                                    login
+                                </a>
+                            </div>
+                            <div class="button">
+                                <div class="button__text">
+                                        contact me
                                 </div>
                             </div>
                         </div>
+
+                        <nav>
+                            <menu>
+                                <ul>
+                                    <li><a href="#" class="menu__link">home</a></li>
+                                    <li><a href="#" class="menu__link">about</a></li>
+                                    <li><a href="#" class="menu__link">news</a></li>
+                                    <li><a href="#" class="menu__link">portfolio</a></li>
+                                    <li><a href="#" class="menu__link">blog</a></li>
+                                </ul>
+                            </menu>
+                            <div class="seacrh-form">
+                                <div class="search-form__input">
+                                    <div class="search-form__icon">
+                                        <i class="fa fa-search" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </nav>
+                        
+                        <div class="article">
+                            <div class="article__header">
+                                What 10 Things Should You Do Every Day To Improve Your Life?
+                            </div>
+                            <div class="article__content">
+                                Learning another language can keep your mind sharp. Music lessons increase intelligence. Challenging your beliefs strengthens your mind.  Increasing willpower just takes a little effort each day and it’s more responsible for your success than IQ.
+                            </div>
+                            <div class="article__list">
+                                <div class="article__list__header">
+                                    Key features
+                                </div>
+                                <ul>
+                                    <li>
+                                        <div class="article__list__item">
+                                            It will make you happier.
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="article__list__item">
+                                            It will improve your relationships.
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="article__list__item">
+                                            It can make you a better person.
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="article__list__item">
+                                            It can make life better for everyone around you.
+                                        </div>
+                                    </li>
+                                </ul> 
+                            </div>
+                        </div>
+
+                        <div class="recent">
+                            <div class="recent__header">
+                                Recent news
+                            </div>
+                            <div class="recent__item">
+                                <dev class="recent__item__img">
+                                    <img src="\img\sea-shore.jpg" alt="">
+                                </dev>
+                                <dev class="recent__title">
+                                    Being in nature reduces stress, makes you more creative
+                                </dev>
+                            </div>
+                            <div class="recent__item">
+                                <dev class="recent__item__img">
+                                    <img src="\img\country-view.jpg" alt="">
+                                </dev>
+                                <dev class="recent__title">
+                                    Usability Testing for Mobile Is Easy
+                                </dev>
+                            </div>
+                            <div class="recent__item">
+                                <dev class="recent__item__img">
+                                    <img src="\img\windows.jpg" alt="">
+                                </dev>
+                                <dev class="recent__title">
+                                    Infinite Scrolling Is Not for Every Website
+                                </dev>
+                            </div>
+                            <div class="recent__item">
+                                <dev class="recent__item__img">
+                                    <img src="\img\mountains-view.jpg" alt="">
+                                </dev>
+                                <dev class="recent__title">
+                                    Ecommerce UX: 3 Design Trends to Follow and 3 to Avoid
+                                </dev>
+                            </div>
+                            <div class="recent__item">
+                                <dev class="recent__item__img">
+                                    <img src="\img\boat.jpg" alt="">
+                                </dev>
+                                <dev class="recent__title">
+                                    University Websites: Top 10 Design Guidelines
+                                </dev>
+                            </div>
+                            <div class="recent__item">
+                                <dev class="recent__item__img">
+                                    <img src="\img\trees.jpg" alt="">
+                                </dev>
+                                <dev class="recent__title">
+                                    University Websites: Top 10 Design Guidelines
+                                </dev>
+                            </div>
+                        </div>
+
+                        <footer>
+                            <div class="footer__top-icon">
+                                <i class="fa fa-angle-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="footer__top-text">
+                                top
+                            </div>
+                        </footer>
                     </div>
+
+
                     <div class="grid__col-md-12">
 
                     </div>
