All files reloaded
All project files reloaded

--- a/index.html
+++ b/index.html
@@ -29,144 +29,152 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <main>
-            <!--HEADER-->                  
+            <!--HEADER-->
             <div class="header">
                 <div class="logo">
                     <div class="logo__title">sitename</div>
                         <div class="logo__description">my first web page</div>
                 </div>
-                    <div class="login">
-                        <div class="login__icon">
-                            <i class="fa fa-key" aria-hidden="true"></i>
-                        </div>
-                        <a class="login__link" href="#">login</a>
+                <div class="login">
+                    <div class="login__icon">
+                        <i class="fa fa-key" aria-hidden="true"></i>
                     </div>
-                        <div class="button">
-                            <div class="button__text">contact me</div>
+                    <a class="login__link" href="#">login</a>
+                </div>
+                <div class="button">
+                        <div class="button__text">contact me</div>
+                </div>
+            </div>
+            <!--END OF HEADER-->
+
+            <!--NAVIGATION-->
+            <nav>
+                <menu>
+                    <ul>
+                        <li><a href="#" class="menu__link">home</a></li>
+                        <li><a href="#" class="menu__link">about</a></li>
+                        <li><a href="#" class="menu__link">news</a></li>
+                        <li><a href="#" class="menu__link">portfolio</a></li>
+                        <li><a href="#" class="menu__link">blog</a></li>
+                    </ul>
+                </menu>
+                <div class="seacrh-form">
+                    <div class="search-form__input">
+                        <div class="search-form__icon">
+                            <i class="fa fa-search" aria-hidden="true"></i>
                         </div>
+                    </div>
+                </div>
+            </nav>
+            <!--END OF NAVIGATION-->
+
+            <!--MAIN CONTENT-->
+            <div class="content-wrapper">
+                <div class="article">
+                    <div class="article__header">
+                        What 10 Things Should You Do Every Day To Improve Your Life?
+                    </div>
+                    <div class="article__content">
+                        Learning another language can keep your mind sharp. Music lessons increase intelligence. Challenging your beliefs strengthens your mind.  Increasing willpower just takes a little effort each day and it’s more responsible for your success than IQ.
+                    </div>
+                    <div class="article-list">
+                        <div class="article-list__header">
+                            Key features
                         </div>
-                <!--END OF HEADER-->
-
-                        <nav>
-                            <menu>
-                                <ul>
-                                    <li><a href="#" class="menu__link">home</a></li>
-                                    <li><a href="#" class="menu__link">about</a></li>
-                                    <li><a href="#" class="menu__link">news</a></li>
-                                    <li><a href="#" class="menu__link">portfolio</a></li>
-                                    <li><a href="#" class="menu__link">blog</a></li>
-                                </ul>
-                            </menu>
-                            <div class="seacrh-form">
-                                <div class="search-form__input">
-                                    <div class="search-form__icon">
-                                        <i class="fa fa-search" aria-hidden="true"></i>
-                                    </div>
+                        <ul>
+                            <li>
+                                <div class="article-list__item">
+                                    It will make you happier.
                                 </div>
-                            </div>
-                        </nav>
-
-                            <div class="content-wrapper">
-                                <div class="article">
-                                    <div class="article__header">
-                                        What 10 Things Should You Do Every Day To Improve Your Life?
-                                    </div>
-                                    <div class="article__content">
-                                        Learning another language can keep your mind sharp. Music lessons increase intelligence. Challenging your beliefs strengthens your mind.  Increasing willpower just takes a little effort each day and it’s more responsible for your success than IQ.
-                                    </div>
-                                    <div class="article-list">
-                                        <div class="article-list__header">
-                                            Key features
-                                        </div>
-                                        <ul>
-                                            <li>
-                                                <div class="article-list__item">
-                                                    It will make you happier.
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="article-list__item">
-                                                    It will improve your relationships.
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="article-list__item">
-                                                    It can make you a better person.
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="article-list__item">
-                                                    It can make life better for everyone around you.
-                                                </div>
-                                            </li>
-                                        </ul> 
-                                    </div>
+                            </li>
+                            <li>
+                                <div class="article-list__item">
+                                    It will improve your relationships.
                                 </div>
-
-                                <div class="recent">
-                                    <div class="recent__header">
-                                        Recent news
-                                    </div>
-                                    <div class="recent__item">
-                                        <dev class="recent__img">
-                                            <img src="\img\sea-shore.jpg" alt="sea shore image" width="172px" height="115px">
-                                        </dev>
-                                        <dev class="recent__title">
-                                            Being in nature reduces stress, makes you more creative
-                                        </dev>
-                                    </div>
-                                    <div class="recent__item">
-                                        <dev class="recent__img">
-                                            <img src="\img\country-view.jpg" alt="country view image" width="172px" height="115px">
-                                        </dev>
-                                        <dev class="recent__title">
-                                            Usability Testing for Mobile Is Easy
-                                        </dev>
-                                    </div>
-                                    <div class="recent__item">
-                                        <dev class="recent__img">
-                                            <img src="\img\windows.jpg" alt="modern building image" width="172px" height="115px">
-                                        </dev>
-                                        <dev class="recent__title">
-                                            Infinite Scrolling Is Not for Every Website
-                                        </dev>
-                                    </div>
-                                    <div class="recent__item">
-                                        <dev class="recent__img">
-                                            <img src="\img\mountains-view.jpg" alt="mountain view image" width="172px" height="115px">
-                                        </dev>
-                                        <dev class="recent__title">
-                                            Ecommerce UX: 3 Design Trends to Follow and 3 to Avoid
-                                        </dev>
-                                    </div>
-                                    <div class="recent__item">
-                                        <dev class="recent__img">
-                                            <img src="\img\boat.jpg" alt="boat image" width="172px" height="115px">
-                                        </dev>
-                                        <dev class="recent__title">
-                                            University Websites: Top 10 Design Guidelines
-                                        </dev>
-                                    </div>
-                                    <div class="recent__item">
-                                        <dev class="recent__img">
-                                            <img src="\img\trees.jpg" alt="trees image" width="172px" height="115px">
-                                        </dev>
-                                        <dev class="recent__title">
-                                            University Websites: Top 10 Design Guidelines
-                                        </dev>
-                                    </div>
+                            </li>
+                            <li>
+                                <div class="article-list__item">
+                                    It can make you a better person.
                                 </div>
+                            </li>
+                            <li>
+                                <div class="article-list__item">
+                                    It can make life better for everyone around you.
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!--END OF MAIN CONTENT-->
 
-                                <footer>
-                                    <div class="footer__icon">
-                                        <i class="fa fa-angle-up" aria-hidden="true"></i>
-                                    </div>
-                                    <div class="footer__text">
-                                        top
-                                    </div>
-                                </footer>
-                            </div>
-        
-    </main>
+            <!--RECENT-->
+                <div class="recent">
+                    <div class="recent__header">
+                        Recent news
+                    </div>
+                    <div class="recent__item">
+                        <div class="recent__img">
+                            <img src="\img\sea-shore.jpg" alt="sea shore image" width="172px" height="115px">
+                        </div>
+                        <div class="recent__title">
+                            Being in nature reduces stress, makes you more creative
+                        </div>
+                    </div>
+                    <div class="recent__item">
+                        <div class="recent__img">
+                            <img src="\img\country-view.jpg" alt="country view image" width="172px" height="115px">
+                        </div>
+                        <div class="recent__title">
+                            Usability Testing for Mobile Is Easy
+                        </div>
+                    </div>
+                    <div class="recent__item">
+                        <div class="recent__img">
+                            <img src="\img\windows.jpg" alt="modern building image" width="172px" height="115px">
+                        </div>
+                        <div class="recent__title">
+                            Infinite Scrolling Is Not for Every Website
+                        </div>
+                    </div>
+                    <div class="recent__item">
+                        <div class="recent__img">
+                            <img src="\img\mountains-view.jpg" alt="mountain view image" width="172px" height="115px">
+                        </div>
+                        <div class="recent__title">
+                            Ecommerce UX: 3 Design Trends to Follow and 3 to Avoid
+                        </div>
+                    </div>
+                    <div class="recent__item">
+                        <div class="recent__img">
+                            <img src="\img\boat.jpg" alt="boat image" width="172px" height="115px">
+                        </div>
+                        <div class="recent__title">
+                            University Websites: Top 10 Design Guidelines
+                        </div>
+                    </div>
+                    <div class="recent__item">
+                        <div class="recent__img">
+                            <img src="\img\trees.jpg" alt="trees image" width="172px" height="115px">
+                        </div>
+                        <div class="recent__title">
+                            University Websites: Top 10 Design Guidelines
+                        </div>
+                    </div>
+                </div>
+                <!--END OF RECENT-->
+
+                <!--FOOTER-->
+                <footer>
+                    <div class="footer__icon">
+                        <i class="fa fa-angle-up" aria-hidden="true"></i>
+                    </div>
+                    <div class="footer__text">
+                        top
+                    </div>
+                </footer>
+                <!--END OF FOOTER-->
+
+        </main>
     </body>
 </html>
